--- a/src/app/Help_EditPanel.form
+++ b/src/app/Help_EditPanel.form
@@ -168,6 +168,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton161ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton162">
               <Properties>
