--- a/src/app/Help_Monthlyrules.form
+++ b/src/app/Help_Monthlyrules.form
@@ -418,6 +418,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton178ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton179">
               <Properties>
