--- a/src/app/Income.form
+++ b/src/app/Income.form
@@ -112,7 +112,7 @@
                   <EmptySpace pref="57" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButton5" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
-                      <Component id="jButton11" alignment="3" max="32767" attributes="0"/>
+                      <Component id="jButton11" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               </Group>
